# sms_gateway

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  Makefile  README.md  code_to_json.py  docker-compose.test.yml  docker-compose.yml  frontend-task.md  login_page_template.html  send_sms.py  source_to_json.py  taks.md  task.md  tasks.md  user_management_template.html
server-a/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
server-a/app/: auth.py  cache.py  config.py  consumers.py  heartbeat.py  idempotency.py  logging.py  main.py  metrics.py  provider_gate.py  quota.py  rabbit.py  schemas.py
server-a/tests/: conftest.py  test_cache.py  test_config_state_consumer.py  test_health_readiness.py  test_heartbeat.py  test_idempotency.py  test_metrics.py  test_provider_gate.py  test_quota.py  test_rabbit.py  test_send_endpoint.py
server-b/: .dockerignore  .env.example  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
server-b/app/: __init__.py  auth.py  config.py  db.py  heartbeat_consumer.py  logging.py  main.py  metrics.py  models.py  policy_engine.py  provider_registry.py  rabbit_consumer.py  repositories.py  schemas.py  status_api.py  users.py  utils.py  webhooks.py
server-b/core/: apps.py  state_broadcaster.py  tests.py  urls.py  views.py
server-b/messaging/: forms.py  metrics.py  models.py  tasks.py  tests.py  urls.py  views.py
server-b/migrations/: env.py
server-b/providers/: adapters.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py  widgets.py
server-b/sms_gateway_project/: asgi.py  (+5 more)
(+215 files in other folders)
