[tool.poetry]
name = "server-a"
version = "0.1.0"
description = "SMS API Gateway - Server A"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
redis = {extras = ["asyncio"], version = ">=5.0.0,<6.0.0"}
aio-pika = "^9.0.7"
prometheus-client = "^0.20.0"
python-json-logger = "^2.0.7"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
black = "^24.4.2"
httpx = "^0.27.0"
asyncio-throttle = "^0.2.0" # For testing rate limits if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"