[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "server-b"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aio-pika",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "httpx",
    "prometheus-client",
    "python-json-logger",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
